feat(module-ui)
Catalog completed

--- a/signup.html
+++ b/signup.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="Anirban Roy">
 
     <title>Movieflix: Free Netflix!</title>
 
@@ -26,7 +27,7 @@
 
                 <section>
                     <div class="col-sm-offset-2 col-sm-6 mydiv">
-                        <form>
+                        <form class="signupform">
                             <p> Register with Movief Flix and enjoy the latest movies and series</p>
                             <fieldset class="form-group">
                                <input type="email" class="form-control" id="userid" placeholder="Enter email">
@@ -43,7 +44,7 @@
                                 <input type="password" class="form-control" id="password2" placeholder="Confirm Password">
                             </fieldset>
                             <div align="center">
-                                <button type="submit" class="btn btn-success">Register</button>
+                                <button id="register" type="submit" class="btn btn-success">Register</button>
                             </div>
 
                         </form>
