--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="Anirban Roy">
 
     <title>Movieflix: Free Netflix!</title>
 
@@ -26,13 +27,8 @@
                 </nav>
 
                 <section>
-                    <!--<div class="col-sm-offset-2 col-sm-8">
-                        <p class="">Enter login credentials to explore MovieFlix</p>
-                        <input id="username" type="text" class="form-control" placeholder="Username" >
-                        <input id="password" type="password" class="form-control" placeholder="password">
-                    </div>-->
-                    <div class="col-sm-offset-2 col-sm-6 mydiv">
-                        <form>
+                    <div class="col-sm-offset-2 col-sm-6">
+                        <form class="loginform">
                             <p> Login to explore latest movies and series at Movie Flix</p>
                             <fieldset class="form-group">
                                <!-- <label for="userid">Email address</label>-->
@@ -43,8 +39,8 @@
                                 <input type="password" class="form-control" id="password" placeholder="Password">
                             </fieldset>
                             <div align="center">
-                                <button type="submit" class="btn btn-danger">Login</button>
-                                <button id="signup" type="submit" class="btn btn-danger">Join Movieflix</button>
+                                <button id="login" type="submit" class="btn">Login</button>
+                                <button id="signup" type="submit" class="btn">Join Movieflix</button>
                             </div>
                         </form>
                         <p id="message"></p>
@@ -52,44 +48,6 @@
                     <!--<button class="btn btn-danger" type="submit">Sign in</button>-->
                 </section>
 
-
-                <!--<div id="posterCarousel" class="carousel slide" data-ride="carousel">
-                    &lt;!&ndash; Indicators &ndash;&gt;
-                    <ol class="carousel-indicators">
-                        <li data-target="#posterCarousel" data-slide-to="0" class="active"></li>
-                        <li data-target="#posterCarousel" data-slide-to="1"></li>
-                        <li data-target="#posterCarousel" data-slide-to="2"></li>
-                        <li data-target="#posterCarousel" data-slide-to="3"></li>
-                    </ol>
-
-                    &lt;!&ndash; Wrapper for slides &ndash;&gt;
-                    <div class="carousel-inner" role="listbox">
-
-
-                        <div class="item active">
-                            <img src="http://ia.media-imdb.com/images/M/MV5BMTU4MDU3NDQ5Ml5BMl5BanBnXkFtZTgwOTU5MDUxNTE@._V1_SX300.jpg" alt="poster1">
-                        </div>
-
-                        <div class="item">
-                            <img src="http://ia.media-imdb.com/images/M/MV5BODU4MjU4NjIwNl5BMl5BanBnXkFtZTgwMDU2MjEyMDE@._V1_SX300.jpg" alt="poster2">
-                        </div>
-
-                        <div class="item">
-                            <img src="http://ia.media-imdb.com/images/M/MV5BNTM3OTc0MzM2OV5BMl5BanBnXkFtZTYwNzUwMTI3._V1_SX300.jpg" alt="poster3">
-                        </div>
-
-                    </div>
-
-                    &lt;!&ndash; Left and right controls &ndash;&gt;
-                    <a class="left carousel-control" href="#posterCarousel" role="button" data-slide="prev">
-                        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="right carousel-control" href="#posterCarousel" role="button" data-slide="next">
-                        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>-->
             </div>
 </body>
 </html>
