feat(module/UI)
minor UI adjustments

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                                 <input type="password" class="form-control" id="password" placeholder="Password">
                             </fieldset>
                             <div align="center">
-                                <button id="login" type="submit" class="btn">Login</button>
-                                <button id="signup" type="submit" class="btn">Join Movieflix</button>
+                                <button id="login" type="button" class="btn">Login</button>
+                                <button id="signup" type="button" class="btn">Join Movieflix</button>
                             </div>
                         </form>
                         <p id="message"></p>
