--- a/catalog.html
+++ b/catalog.html
@@ -6,11 +6,6 @@
     <meta name="author" content="Anirban Roy">
     <title>Movieflix: Free Netflix!</title>
 
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="flix.js"></script>
-    <link type="text/css" href="style.css" rel="stylesheet">
 </head>
 <body>
             <div class="container-fluid">
@@ -180,5 +175,11 @@
 
                 </div>
             </div>
+
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="src/javascript/flix.js"></script>
+    <link type="text/css" href="src/styles/style.css" rel="stylesheet">
 </body>
 </html>
