--- a/index.html
+++ b/index.html
@@ -1,19 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Anirban Roy">
 
     <title>Movieflix: Free Netflix!</title>
-
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="flix.js"></script>
-    <link type="text/css" href="style.css" rel="stylesheet">
 </head>
-<body>
+<body ng-app='loginapp'>
             <div class="container-fluid">
                 <nav class="navbar navbar-dark bg-inverse">
                     <a class="navbar-brand flixbrand" href="#">Movie Flix</a>
@@ -26,28 +20,40 @@
                     </div>
                 </nav>
 
-                <section>
+                <section ng-controller="LoginController as loginVm">
                     <div class="col-sm-offset-2 col-sm-6">
-                        <form class="loginform">
+                        <form class="loginform" ng-fo>
                             <p> Login to explore latest movies and series at Movie Flix</p>
                             <fieldset class="form-group">
                                <!-- <label for="userid">Email address</label>-->
-                                <input type="email" class="form-control" id="userid" placeholder="Enter email">
+                                <input ng-model="loginVm.user.email" type="text" required class="form-control" id="userid" placeholder="Enter email">
                             </fieldset>
                             <fieldset class="form-group">
                                 <!--<label for="password">Password</label>-->
-                                <input type="password" class="form-control" id="password" placeholder="Password">
+                                <input ng-model="loginVm.user.password" type="password" class="form-control" id="password" placeholder="Password">
                             </fieldset>
                             <div align="center">
-                                <button id="login" type="button" class="btn">Login</button>
+                                <button id="login" type="button" class="btn" ng-click="loginVm.validateUser()">Login</button>
                                 <button id="signup" type="button" class="btn">Join Movieflix</button>
                             </div>
+                            <div align="center">
+                                <p class="message">{{loginVm.message}}</p>
+                            </div>
                         </form>
-                        <p id="message"></p>
+
                     </div>
                     <!--<button class="btn btn-danger" type="submit">Sign in</button>-->
                 </section>
 
             </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-cookies.js"></script>
+    <script src="src/javascript/flix.js"></script>
+    <script src="src/javascript/login.controller.js"></script>
+    <link type="text/css" href="src/styles/style.css" rel="stylesheet">
 </body>
 </html>
