--- a/index.html
+++ b/index.html
@@ -20,30 +20,10 @@
                     </div>
                 </nav>
 
-                <section ng-controller="LoginController as loginVm">
-                    <div class="col-sm-offset-2 col-sm-6">
-                        <form class="loginform" ng-fo>
-                            <p> Login to explore latest movies and series at Movie Flix</p>
-                            <fieldset class="form-group">
-                               <!-- <label for="userid">Email address</label>-->
-                                <input ng-model="loginVm.user.email" type="text" required class="form-control" id="userid" placeholder="Enter email">
-                            </fieldset>
-                            <fieldset class="form-group">
-                                <!--<label for="password">Password</label>-->
-                                <input ng-model="loginVm.user.password" type="password" class="form-control" id="password" placeholder="Password">
-                            </fieldset>
-                            <div align="center">
-                                <button id="login" type="button" class="btn" ng-click="loginVm.validateUser()">Login</button>
-                                <button id="signup" type="button" class="btn">Join Movieflix</button>
-                            </div>
-                            <div align="center">
-                                <p class="message">{{loginVm.message}}</p>
-                            </div>
-                        </form>
+            <div ng-view>  <!-- the login/signup view loads here -->
 
-                    </div>
-                    <!--<button class="btn btn-danger" type="submit">Sign in</button>-->
-                </section>
+            </div>
+
 
             </div>
 
@@ -52,8 +32,11 @@
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-cookies.js"></script>
-    <script src="src/javascript/flix.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-route.js"></script>
+    <script src="src/javascript/loginapp.js"></script>
+    <script src="src/javascript/signup.controller.js"></script>
     <script src="src/javascript/login.controller.js"></script>
+
     <link type="text/css" href="src/styles/style.css" rel="stylesheet">
 </body>
 </html>
